# exercises

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CHANGELOG.md  Makefile  README.md  cabal.project  exercises.cabal  shell.nix  stack.yaml  tmp.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  hlint.yml
app/: Main.hs
nix/: sources.json
src/: Exercises.hs  Lecture1.hs  Lecture2.hs  Lecture3.hs  Lecture4.hs  RandomStuff.hs  Utils.hs
src/My solutions/: 1.2 - sumOfSquares.hs  1.3 - lastDigit.hs  1.5 - subString.hs  7 - lowerAndGreater.hs
tasks/: build.bat  clean.bat  test-all.bat  test-lecture1.bat  test-lecture2.bat
test/: DoctestLecture1.hs  DoctestLecture2.hs  DoctestLecture3.hs  Spec.hs  products.csv
test/Test/: Lecture1.hs  Lecture2.hs  Lecture3.hs  Lecture4.hs
